Trying to fix  background image in Home

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ body:after {
   -o-transition: .3s all ease-in-out;
   transition: .3s all ease-in-out; }
 
+#image_background{
+  background-size: cover;
+}
 
 .offcanvas-menu {
   position: relative; }
