--- a/css/style.css
+++ b/css/style.css
@@ -2371,12 +2371,14 @@ figure figcaption {
 }
 
 #landing-intro{
+  padding-top: 0.3em;
   color: #71ab76;
   font-weight: 400;
 }
 
 #landing-description{
-  font-weight: 300; 
+  font-weight: 300;
+  padding-bottom: 4.8em; 
 }
 
 .badge{
@@ -2399,4 +2401,8 @@ figure figcaption {
 
 #ssl-text{
   color: black;
+} 
+
+#info {
+  padding-top: 1.2em;
 }
