chore(lang): update join us page warn

--- a/css/style.css
+++ b/css/style.css
@@ -2332,7 +2332,7 @@ figure figcaption {
 .sel-warn{
   color: white;
   margin-bottom: -17px;
-  background-color: #2eb82e;
+  background-color: #dc3545;
   font-family: 'Alata', sans-serif !important;
 }
 
