feat: new version of seletiva.html (#30)
* feat: new version of seletiva.html

* fix: header text.

* fix: text in header 2

* feat: added faq to the page

* feat: update faq and header text

* feat: fix footer

* fix: changed text in header

* feat: add projects and registration notice

* fix: fixed name of pdfs

* fix: fixed projects names and fixed css

* fix: hsbs logo

* feat: added tag to mecanica project

* fix: header margin

* fix: microsoft logo and hsbs and text in the header

* Update seletiva.html

Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>

* Update seletiva.html

Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>

* Update seletiva.html

Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>

* Update seletiva.html

Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>

* Update seletiva.html

Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>

* fix: changed text in header

Co-authored-by: Roberto Fernandes <rcf6@cin.ufpe.br>
Co-authored-by: João Pedro Moura <49729323+jpspm@users.noreply.github.com>
Co-authored-by: Elisson Araújo <44985807+ersaraujo@users.noreply.github.com>

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
     object-position: center;
   }
   .d img {
-    width: 35%;
+    width: 23%;
     height: auto;
     object-fit: cover;
     object-position: center;
@@ -94,7 +94,7 @@ body {
     .a img {width: 50%;height: auto;object-fit: cover;object-position: center;}
     .b img {width: 68%;height: auto;object-fit: cover;object-position: center;}
     .c img {width: 42%;height: auto;object-fit: cover;object-position: center;}
-    .d img {width: 60%;height: auto;object-fit: cover;object-position: center;}
+    .d img {width: 40%;height: auto;object-fit: cover;object-position: center;}
     .e img {width: 20%;height: auto;object-fit: cover;object-position: center;}
     .f img {width: 20%;height: auto;object-fit: cover;object-position: center;}
   } 
@@ -242,7 +242,7 @@ footer ul li{
 
 #cin-img{
   /* margin-left: 100px !important; */
-  margin: auto;
+  margin: 0.1rem;
 }
 
 #hsbs-img{
